--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-"homepage": "https://iamali-stack.github.io/E-commerce-App",
+  "homepage": "https://iamali-stack.github.io/E-commerce-App-main",
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
